@@ -3,26 +3,23 @@
 
 #include <stdarg.h>
 #include "tscript_values.h"
+#include "tscript_variables_private.h"
+#include "tscript_extensions_private.h"
 
 struct tscript_ast_node;
-struct tscript_variables_map;
-struct tscript_extension_map;
-struct tscript_constant_map;
 typedef void tscript_debug_callback(const char* format, va_list ap);
 
 typedef struct tscript_context
 {
 	struct tscript_ast_node* ast;
-	struct tscript_variables_map* vars;
-	struct tscript_extension_map* extensions;
-	struct tscript_constant_map* constants;
+	tscript_variables_map* vars;
+	tscript_extension_map* extensions;
+	tscript_constant_map* constants;
 	char* error;
 	tscript_debug_callback* debug_callback;
 } tscript_context;
 
 #include "tscript_ast.h"
-#include "tscript_variables.h"
-#include "tscript_extensions.h"
 
 /**
 	Creates new independend context with byte-code space and data space,
