@@ -1,29 +1,18 @@
 #ifndef TSCRIPT_EXTENSIONS_H
 #define TSCRIPT_EXTENSIONS_H
 
+#include "tscript_extensions_private.h"
 #include "tscript_context.h"
 #include "tscript_values.h"
 
-typedef tscript_value* tscript_extension_func(tscript_value* arg);
-typedef tscript_value* tscript_constant_func();
+/**
+	Adds new extension.
+	min_args - minimum numer of arguments (0..MAX_INT)
+	max_args - maximum numer of arguments (0..MAX_INT), -1 = no limit
+**/
+void tscript_add_extension(tscript_context* context, char* keyword, tscript_extension_func* func,
+	int min_args, int max_args);
 
-typedef struct
-{
-	tscript_extension_func* func;
-	int block;
-} tscript_extension;
-
-typedef struct
-{
-	tscript_constant_func* func;
-	int cached;
-	tscript_value* value;
-} tscript_constant;
-
-map_declaration(tscript_extension_map, char*, tscript_extension);
-map_declaration(tscript_constant_map, char*, tscript_constant);
-
-void tscript_add_extension(tscript_context* context, char* keyword, tscript_extension_func* func);
 void tscript_remove_extension(tscript_context* context, char* keyword);
 void tscript_extension_set_block(tscript_context* context, char* keyword);
 int tscript_extension_is_block(tscript_context* context, char* keyword);
