@@ -30,6 +30,7 @@ version ? (??/??/????):
   - lmsd/dhcp: added support for public IP addresses (alec)
   - in Customer Documents displaying last 10 documents with link to
     all documents list (alec)
+  - lmsd/parser: added 'explode' extension, updated T-Script library (alec)
 
 version 1.7.2 Doci (2005-08-13):
 
